--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     "_cInsights": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "http://localhost:5000/api/values",
+      "launchUrl": "http://localhost:5000/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
