--- a/web.config
+++ b/web.config
@@ -11,4 +11,7 @@
     </handlers>
     <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false"/>
   </system.webServer>
+  <packageSources>
+    <add key="xunit" value="https://www.myget.org/F/xunit/" />
+  </packageSources>
 </configuration>
